--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,9 @@ body {
   height: 100%;
   width: 100%;
 }
+
+@media only screen and (max-width: 768px) {
+  .content {
+    padding: 10px;
+  }
+}
